# portfolio-backend-FastAPI

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirement-dev.txt  requirements.txt
.github/workflows/: backend-fastapii-deploy-AutoDeployTrigger-315cdc61-564a-4551-a613-c9d910bc0961.yml
app/: config.py  main.py
app/api/: __init__.py  deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: __init__.py  (+7 more)
app/core/: __init__.py  azure_storage.py  cache.py  config.py  exceptions.py  logging.py  security.py
app/db/: __init__.py  base.py  database.py  session.py
app/db/repositories/: __init__.py  base.py  blog.py  project.py  reaction.py  subscriber.py  user.py
app/models/: __init__.py  blog.py  contact.py  media.py  profile.py  project.py  reaction.py  subscriber.py  user.py  user_models.py
app/routers/: auth_router.py
app/schemas/: __init__.py  auth.py  blog.py  contact.py  media.py  profile.py  project.py  reaction.py  subscriber.py  user.py  user_schemas.py
app/services/: auth.py  email.py  email_service.py  media.py  notification.py  reaction.py  user_service.py
app/utils/: __init__.py  helpers.py  pagination.py  validators.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
portfolio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: create_admin.py  init_db.py  seed_data.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_blog_api.py  test_projects_api.py
tests/unit/: test_auth_service.py  test_repositories.py  test_utils.py
