[project]
name = "portfolio-backend"
version = "0.1.0"
description = "Backend for personal portfolio"
authors = [{ name = "Nilson Escobar", email = "escnil994@nilson-escobar.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "sqlalchemy>=2.0.42",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "pyodbc>=5.2.0"
]

